# energy-track

./: README.md  pyproject.toml
alembic/versions/: 9d0a3d4f5c6b_add_streak_to_users.py
app/api/v1/endpoints/: login.py
app/models/: users.py
app/schemas/: user.py
app/services/: streak_service.py
backend/: api_server.py  consumer.py  docker-compose.yml  failure_model.pkl  ml_consumer.py  producer.py  requirements.txt  server.py  train_model.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.jsx  index.css
frontend/src/components/factory/: AlertsPanel.tsx  AlexaVoiceChat.tsx  ChatSystem.tsx  DeviceModal.tsx  FactoryDashboard.tsx  FactoryMap.tsx  KPICard.tsx  StatusBadge.tsx
frontend/src/components/ui/: button.tsx
frontend/src/pages/: Dashboard.tsx  Index.tsx  NotFound.tsx
frontend/src/types/: factory.ts
ml-engine/: processor_analytics.py  requirements.txt
tests/services/: test_streak_service.py
